--- a/themes/dbtype-theme/layouts/partials/header.html
+++ b/themes/dbtype-theme/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
   <div class="header-inner">
-    <img src="{{ .Site.Params.university_logo | relURL }}" alt="Logo" class="logo">
+    <a href="https://www.unibas.it"><img src="{{ .Site.Params.university_logo | relURL }}" alt="Logo" class="logo"></a>
 
     <h1>{{ .Site.Params.group_name }}</h1>
   </div>
